--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,35 @@
-/* write your override styles here */
+ /*write your override styles here */
+/*tag-1*/
+#wall .tag-1 {
+  display: none;
+}
+
+/*tag-2*/
+#wall .tag-1 + #tag-2 {
+  display: none;
+}
+
+/*tag-3*/
+#wall #tag-2 + #tag-3 {
+  display: none;
+}
+
+/*tag-4*/
+#wall .parent #tag-4 {
+  display: none;
+}
+
+/*tag-5*/
+div#wall div.parent #tag-5.slick {
+  display: none;
+}
+
+/*tag-6*/
+body div#wall div.parent div:last-child div#tag-6 {
+  display: none;
+}
+
+/*tag-7*/
+html body div#wall div.parent div > #tag-7.slick {
+  display: none;
+}
