--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,29 @@
+#wall .tag-1 {
+  display:none;
+}
+
+#wall #tag-2 {
+  display:none;
+}
+
+#wall #tag-3 .slick {
+  display:none;
+}
+
+#wall .parent #tag-4 {
+  display:none;
+}
+
+#wall .parent #tag-5 {
+  display:none;
+}
+
+#wall .parent #tag-6 {
+  display:none;
+}
+
+#wall .parent #tag-7 .slick {
+  display:none;
+}
+
 /* write your override styles here */
